--- a/styles.scss
+++ b/styles.scss
@@ -1,25 +1,32 @@
 $Green: #2a3e3f;
+$Details-green: #689f8c;
 $Soft-green: #eaecec;
 
 body {
-  font-family: "Lato", sans-serif;
+  font-family: "Gothic A1", sans-serif;
   background: url("./assets/Bg-image.png") no-repeat;
   background-position: 0px;
   background-size: 20rem;
   form {
+    position: fixed;
+    top: 20vh;
+    right: 20vw;
     background-color: $Soft-green;
     padding: 1rem 2rem;
     width: fit-content;
-
     border-radius: 30px;
-    margin: 5rem auto auto 25rem;
-
     color: $Green;
-
     display: flex;
     flex-direction: column;
     box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
-
+    label {
+      letter-spacing: 0.2em;
+      font-size: 15px;
+      &:last-child {
+        font-size: 12px;
+        cursor: pointer;
+      }
+    }
     input {
       width: 20rem;
       height: 2rem;
@@ -27,12 +34,28 @@ body {
       border: none;
       box-shadow: inset 2px 2px 4px rgba(0, 0, 0, 0.25);
       margin: 1rem 0;
+      &::placeholder {
+        padding-left: 0.5rem;
+      }
+      &:focus {
+        outline-color: $Details-green;
+        &::placeholder {
+          color: white;
+        }
+      }
       &[type="checkbox"] {
         width: auto;
         height: auto;
         box-shadow: inset 2px 2px 4px rgba(0, 0, 0, 0.25);
+        margin-right: 0.3rem;
+        cursor: pointer;
       }
+      &:checked {
+        color: magenta;
+      }
+
       &:last-child {
+        color: $Green;
         width: 5rem;
         margin-bottom: 0;
         align-self: center;
@@ -41,6 +64,13 @@ body {
         border-style: solid;
         background-color: $Soft-green;
         box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
+        transition: 0.3s ease-in-out;
+        &:hover {
+          background-color: $Green;
+          color: white;
+          transition: 0.3s ease-in-out;
+          cursor: pointer;
+        }
       }
     }
   }
