--- a/styles.scss
+++ b/styles.scss
@@ -4,9 +4,14 @@ $Soft-green: #eaecec;
 
 body {
   font-family: "Gothic A1", sans-serif;
-  background: url("./assets/Bg-image.png") no-repeat;
-  background-position: 0px;
-  background-size: 20rem;
+  background: url("./assets/BgRectangle.png") no-repeat;
+  background-position: -1rem;
+  background-size: 100vh;
+  img {
+    &:first-of-type {
+      width: 3rem;
+    }
+  }
   form {
     position: fixed;
     top: 20vh;
@@ -21,9 +26,9 @@ body {
     box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
     label {
       letter-spacing: 0.2em;
-      font-size: 15px;
+      font-size: 1rem;
       &:last-child {
-        font-size: 12px;
+        font-size: 0.8rem;
         cursor: pointer;
       }
     }
