--- a/styles.scss
+++ b/styles.scss
@@ -77,6 +77,9 @@ body {
       &:last-child {
         color: $Green;
         width: 5rem;
+        letter-spacing: 0.1em;
+        font-size: 1rem;
+        font-weight: bold;
         margin-bottom: 0;
         align-self: center;
         border-radius: 5px;
